[metadata]
name = partizan
version = 0.0.1
summary = Electronics parts inventory.
description-file =
    README.rst
author = Endre Karlson
author-email = endre.karlson@gmail.com
home-page = http://github.com/ekarlso/partizan
classifier =
    Environment :: Electronics
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    partizan

[entry_points]
console_scripts =
    partizan-server = partizan.cmd.api:main
    partizan-manage = partizan.cmd.manage:main

partizan.manage =
    database = partizan.manage.database:DatabaseCommands

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = partizan/locale
domain = partizan

[update_catalog]
domain = partizan
output_dir = partizan/locale
input_file = partizan/locale/partizan.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = partizan/locale/partizan.pot

[wheel]
universal = 1
